# ga4ghphetools

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: docs.yml
book/: book.toml  open_external.js  style.css
book/src/: SUMMARY.md  api.md  app.md  demo.md  excel.md  getting-started.md  introduction.md  phenotype-hpoa.md
docs/: api.md  getting-started.md  index.md  introduction.md  legacy.md
docs/.vitepress/: config.mjs
resources/: README.md
scripts/: build_docs.sh
src/: age.rs  allele.rs  curie.rs  dataframe.rs  disease_gene_bundle.rs  error.rs  excel.rs  header.rs  hpo.rs  hpo_term_template.rs  individual_template.rs  lib.rs  main.rs  onset.rs  phetools_qc.rs  ppkt.rs  ppt_template.rs  rphetools_traits.rs  rpyphetools_traits.rs  simple_hpo.rs  simple_label.rs  simple_term.rs  template_creator.rs  test_utils.rs  transcript.rs
src/age/: age_etl.rs  age_util.rs  gestational_age.rs  hpo_age.rs  iso_age.rs  mod.rs
src/builder/: individual_builder.rs  mod.rs  phenopacket_builder.rs  time_elements.rs  vital_status_builder.rs
src/dto/: case_dto.rs  cohort_dto.rs  etl_dto.rs  hgvs_dto.rs  hgvs_variant.rs  hpo_cell_dto.rs  hpo_term_dto.rs  intergenic_variant.rs  mitochondrial_variant.rs  mod.rs  structural_variant.rs  template_dto.rs  validation_errors.rs  variant_dto.rs
src/etl/: etl_converter.rs  etl_tools.rs  mod.rs
src/export/: cohort_renderer.rs  excel_export.rs  html_renderer.rs  mod.rs  table_compare.rs
src/factory/: cohort_factory.rs  cohort_qc.rs  disease_bundle.rs  excel.rs  gene_variant_bundle.rs  header_duplet_row.rs  individual_bundle.rs  mod.rs  phetools.rs
src/header/: age_last_encounter.rs  age_of_onset_duplet.rs  age_util.rs  allele_1_duplet.rs  allele_2_duplet.rs  allele_util.rs  comment_duplet.rs  deceased_duplet.rs  demographic_header.rs  disease_header.rs  disease_id_duplet.rs  disease_label_duplet.rs  duplet_item.rs  gene_symbol_duplet.rs  gene_variant_header.rs  header_duplet.rs  hgnc_duplet.rs  hpo_separator_duplet.rs  hpo_term_duplet.rs  individual_header.rs  individual_id_duplet.rs  mod.rs  pmid_duplet.rs  sex_duplet.rs  title_duplet.rs  transcript_duplet.rs  variant_comment_duplet.rs
src/header_duplet/: age_last_encounter.rs  age_of_onset_duplet.rs  allele_1_duplet.rs  allele_2_duplet.rs  comment_duplet.rs  deceased_duplet.rs  disease_id_duplet.rs  disease_label_duplet.rs  gene_symbol_duplet.rs  header_duplet.rs  hgnc_duplet.rs  hpo_separator_duplet.rs  hpo_term_duplet.rs  individual_id_duplet.rs  mod.rs  pmid_duplet.rs  sex_duplet.rs  title_duplet.rs  transcript_duplet.rs  variant_comment_duplet.rs
src/hpo/: age_util.rs  dto_validator.rs  hpo_hierarchizer.rs  hpo_modifiers.rs  hpo_term_arranger.rs  hpo_term_dto.rs  hpo_term_template.rs  hpo_util.rs  mod.rs  simple_hpo.rs
src/hpoa/: counted_hpo_term.rs  hpo_term_counter.rs  hpoa_onset_calculator.rs  hpoa_table.rs  hpoa_table_row.rs  mod.rs  pmid_counter.rs
src/html/: cohort_renderer.rs  html_renderer.rs  mod.rs
src/persistence/: dir_manager.rs  mod.rs
src/ppkt/: mod.rs  ppkt_exporter.rs  ppkt_row.rs  ppkt_utils.rs  ppkt_variant_exporter.rs  variant_exporter.rs
src/pptcolumn/: age.rs  allele.rs  deceased.rs  disease_gene_bundle.rs  header_duplet.rs  mod.rs  ppt_column.rs  pptheaders.rs  transcript.rs
src/repo/: cohort_dir.rs  cohort_qc.rs  compare_ppkt.rs  dashboard_data.rs  disease_qc.rs  gpt_repository.rs  mod.rs  qc_report.rs  repo_qc.rs
src/tauri/: fs_utils.rs  mod.rs  models.rs  parent_child.rs
src/template/: cohort_dto_builder.rs  curie.rs  demographic_bundle.rs  disease_bundle.rs  disease_gene_bundle.rs  excel.rs  gene_variant_bundle.rs  header_duplet_row.rs  header_index.rs  individual_bundle.rs  individual_template.rs  itemplate_factory.rs  mod.rs  operations.rs  phetools.rs  phetools_qc.rs  ppkt_exporter.rs  ppkt_row.rs  ppt_template.rs  pt_template.rs  simple_label.rs  template_creator.rs  template_row_adder.rs
src/variant/: acmg.rs  mod.rs  (+11 more)
tests/: integration_cohort.rs  integration_combine_cohort_test.rs  integration_create_ppkt.rs  integration_dir_manager_tests.rs  integration_etl_dto.rs  integration_get_set_tests.rs  integration_new_row_tests.rs  integration_tests.rs
(+5 files in other folders)
