[package]
name = "ga4ghphetools"
version = "0.3.4"
edition = "2021"
keywords = ["GA4GH", "Phenopacket Schema", "Human Phenotype Ontology"]
description = "Generate GA4GH phenopackets from tabular data"
license = "BSD-3-Clause"
readme = "README.md"

[lib]
name = "ga4ghphetools"
path = "src/lib.rs"

[features]
cli = ["dep:clap"]

[[bin]]
name = "rpt"
path = "bin/main.rs"
required-features = ["cli"]



[dependencies]
calamine = "0.28.0" 
chrono = "0.4.41"
derive_more = {version = "2.0.1", features = ["from", "display"]}
home = "0.5.11"
lazy_static = "1.5.0"
once_cell = "1.21.3"
ontolius = "0.5.3"
phenopackets = "0.2.2-post1"
phenopacket_tools = { git = " https://github.com/P2GX/phenopacket_tools.git", tag = "0.2.1" }
polars = "0.49.1"
prost = "0.14.1" 
prost-types = "0.14.1"
rand = "0.9"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
zip = "4.3.0"
reqwest = {version = "0.12.22", features = ["blocking", "json"]}
serde_json = "1.0.140"
clap = { version = "4.5.41", features = ["derive"], optional = true }

[lints.rust]
unsafe_code = "forbid"
unused_variables = "allow" ## for dev only


[dev-dependencies]
flate2 = "1.0.30"
rstest = "0.25.0"
