[package]
name = "ga4ghphetools"
version = "0.5.26"
edition = "2021"
keywords = ["GA4GH", "Phenopacket Schema", "Human Phenotype Ontology"]
description = "Generate GA4GH phenopackets from tabular data"
license = "BSD-3-Clause"
readme = "README.md"

[lib]
name = "ga4ghphetools"
path = "src/lib.rs"



[[bin]]
name = "rpt"
path = "bin/main.rs"
required-features = ["cli"]



[dependencies]
calamine = "0.33.0" 
chrono = "0.4.43"
derive_more = {version = "2.1.1", features = ["from", "display"]}
home = "0.5.11"
lazy_static = "1.5.0"
once_cell = "1.21.3"
ontolius = "0.7.2"
phenopackets = "0.2.2-post2"
phenopacket_tools = { git = " https://github.com/P2GX/phenopacket_tools.git", tag = "0.2.4" }
prost = "0.14.3" 
prost-types = "0.14.3"
rand = "0.10.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
zip = "6.0.0"
reqwest = {version = "0.13.2", features = ["blocking", "json"]}
serde_json = { version = "1.0.149", features = ["preserve_order"] }
clap = { version = "4.5.58", features = ["derive"], optional = true }
rayon = "=1.10.0"
tera = "1.20.1"
uuid = { version = "1.21.0", features = ["v4"] }
rust_xlsxwriter = { version = "0.93.0", optional = true }
urlencoding = "2.1.3"
walkdir = "2.5"

[features]
cli = ["dep:clap"]
excel_export = ["rust_xlsxwriter"]

[lints.rust]
unsafe_code = "forbid"
# unused_variables = "allow" ## for dev only


[dev-dependencies]
flate2 = "1.0.30"
rstest = "0.26.1"
