[package]
name = "ga4ghphetools"
version = "0.6.14"
edition = "2021"
keywords = ["GA4GH", "Phenopacket Schema", "Human Phenotype Ontology"]
description = "Generate GA4GH phenopackets from tabular data"
license = "BSD-3-Clause"
readme = "README.md"

[lib]
name = "ga4ghphetools"
path = "src/lib.rs"



[[bin]]
name = "phetools"
path = "bin/main.rs"
required-features = ["cli"]


[dependencies]
calamine = "0.33.0" 
chrono = "0.4.44"
derive_more = {version = "2.1.1", features = ["from", "display"]}
home = "0.5.11"
ontolius = "0.7.4"
phenopackets = "0.2.2-post2"
phenopacket_tools = { git = " https://github.com/P2GX/phenopacket_tools.git", tag = "0.2.4" }
prost = "0.14.3" 
prost-types = "0.14.3"
rand = "0.10.1"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
zip = "6.0.0"
reqwest = {version = "0.13.4", features = ["blocking", "json"]}
serde_json = { version = "1.0.150", features = ["preserve_order"] }
clap = { version = "4.6.1", features = ["derive"], optional = true }
rayon = "=1.10.0"
tauri-plugin-fs = { version = "2.0", optional = true }
tera = "1.20.1"
uuid = { version = "1.23.2", features = ["v4"] }
rust_xlsxwriter = { version = "0.95.0", optional = true }
urlencoding = "2.1.3"
walkdir = "2.5"

[features]
cli = ["dep:clap"]
excel_export = ["rust_xlsxwriter"]
tauri = ["dep:tauri-plugin-fs"]


[lints.rust]
## for dev only
unused_variables = "allow" 
unsafe_code = "forbid"



[dev-dependencies]
flate2 = "1.1.9"
rstest = "0.26.1"
